refactor: begin updating to new scafall API and structure

--- a/spigot/src/main/resources/plugin.yml
+++ b/spigot/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: viewportl
 version: '${version}'
-main: com.wolfyscript.viewportl.loader.SpigotViewportlLoader
+main: com.wolfyscript.viewportl.spigot.ViewportlLoaderPlugin
 api-version: 1.21
 authors: [ WolfyScript ]
 load: STARTUP
