--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,8 +2,10 @@
 
 [versions]
 # Kotlin & Jetbrains
-kotlin = "2.0.21"
+kotlin = "2.2.20"
 jetbrains-annotations = "23.0.0"
+compose = "1.9.0"
+coroutines = "1.10.2"
 
 # Configuration
 jackson = "2.15.4"
@@ -65,6 +67,7 @@ resource-factory = "1.3.0"
 # Kotlin & Jetbrains
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "jetbrains-annotations" }
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 
 # Configurations
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jackson" }
@@ -127,3 +130,5 @@ artifactory = { id = "com.jfrog.artifactory", version.ref = "artifactory"}
 fabric-loom = { id = "fabric-loom", version.ref = "fabric-loom" }
 paperweight-userdev = { id = "io.papermc.paperweight.userdev", version.ref = "paperweight-userdev" }
 resource-factory-bukkit = { id = "xyz.jpenilla.resource-factory-bukkit-convention", version.ref= "resource-factory"}
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
